--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "mc-scripts build",
     "start": "node app.js"
   },
   "author": "Natalie Rauh",
